bk_ida/gccida/g3/record_base_value
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1464:4: error: expected ';' after expression
rtx v12; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1464:5: error: use of undeclared identifier 'v12'; did you mean 'v10'?
rtx v12; // rbp 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1462:18: note: 'v10' declared here
 struct rtx_def *v10; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1467:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1467:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1530:1: error: use of undeclared identifier 'v12'
v12 = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1531:20: error: use of undeclared identifier 'v12'
if ( ( *( _DWORD *)v12 & 0x8000FFFF) == -2147483587 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1533:17: error: use of undeclared identifier 'v12'
v4 = *( _WORD *)v12; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1534:13: error: expected ';' after expression
val = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1545:17: error: use of undeclared identifier 'v12'
if ( *( _WORD *)v12 == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1547:24: error: use of undeclared identifier 'v12'
v15 = find_base_value( v12); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1547:1: error: use of undeclared identifier 'v15'
v15 = find_base_value( v12); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1548:6: error: use of undeclared identifier 'v15'
if ( v15 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1549:1: error: use of undeclared identifier 'v12'
v12 = v15; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1549:7: error: use of undeclared identifier 'v15'
v12 = v15; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1554:18: error: use of undeclared identifier 'v12'
v13 = *( _WORD *)v12; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1555:38: error: use of undeclared identifier 'v12'
if ( ( unsigned __int16)( *( _WORD *)v12 - 67) <= 1u ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1563:17: error: use of undeclared identifier 'v12'
v4 = *( _WORD *)v12; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1564:7: error: use of undeclared identifier 'v12'
val = v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/alias.c:1568:20: error: use of undeclared identifier 'v12'
if ( !*( ( _BYTE *)v12 + 2) ) 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_base_value/src/obj/alias.o] Error 1
